compiler/src/test/resources/golden/errors/derive_unknown_trait.err
error: unknown derivable trait `Eq`
  --> derive_unknown_trait.dawn:1:35
  |
1 | type Color = | Red | Green derive Eq
  |                                   ^^
  = hint: Show and Ord can be derived
